// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alarm widget should render "No active alarms" when no alarms exist 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-1352uh8-0 kLLEPp"
  >
    <div
      class="styledComponents__Wrapper-sc-13w5wfx-4 lfySov"
      type="default"
    >
      <div
        class="ant-card"
      >
        <div
          class="ant-card-head"
        >
          <div
            class="ant-card-head-wrapper"
          >
            <div
              class="ant-card-head-title"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                >
                  <div
                    class="styledComponents__Title-sc-13w5wfx-5 hYNJuf"
                  >
                    Alarms
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-card-extra"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              />
            </div>
          </div>
        </div>
        <div
          class="ant-card-body"
        >
          <div
            style="overflow: visible; height: 0px; width: 0px;"
          >
            <div
              class="styledComponents__NoDataWrapper-sc-m7jeli-0 bvtRvB"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center styledComponents__TextWrapper-sc-m7jeli-1 iRdLpd"
              >
                <div
                  class="ant-space-item"
                >
                  <svg
                    class="styledComponents__GreenTickIcon-sc-m7jeli-3 bRCYfh"
                    data-testid="CheckMarkCircleSolid"
                  />
                </div>
              </div>
              <div
                class="ant-space ant-space-horizontal ant-space-align-center styledComponents__TextWrapper-sc-m7jeli-1 styledComponents__NoDataTextWrapper-sc-m7jeli-2 iRdLpd cMdQDn"
              >
                <div
                  class="ant-space-item"
                >
                  No active alarms
                </div>
              </div>
            </div>
          </div>
          <div
            class="resize-triggers"
          >
            <div
              class="expand-trigger"
            >
              <div
                style="width: 1281px; height: 801px;"
              />
            </div>
            <div
              class="contract-trigger"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alarm widget v2 should render "No active alarms" when no alarms exist 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-1352uh8-0 kLLEPp"
  >
    <div
      class="styledComponents__Wrapper-sc-13w5wfx-4 lfySov"
      type="default"
    >
      <div
        class="ant-card"
      >
        <div
          class="ant-card-head"
        >
          <div
            class="ant-card-head-wrapper"
          >
            <div
              class="ant-card-head-title"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                >
                  <div
                    class="styledComponents__Title-sc-13w5wfx-5 hYNJuf"
                  >
                    Alarms
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-card-extra"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-default ant-btn-icon-only styledComponents__Button-sc-13w5wfx-3 hJUrXB"
                    title="Expand"
                    type="button"
                  >
                    <svg
                      class="styledComponents__ArrowChevronRightIcon-sc-13w5wfx-0 bIuzgA"
                      data-testid="ArrowChevronRight"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-card-body"
        >
          <div
            style="overflow: visible; height: 0px; width: 0px;"
          >
            <div
              class="styledComponents__NoDataWrapper-sc-m7jeli-0 bvtRvB"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center styledComponents__TextWrapper-sc-m7jeli-1 iRdLpd"
              >
                <div
                  class="ant-space-item"
                >
                  <svg
                    class="styledComponents__GreenTickIcon-sc-m7jeli-3 bRCYfh"
                    data-testid="CheckMarkCircleSolid"
                  />
                </div>
              </div>
              <div
                class="ant-space ant-space-horizontal ant-space-align-center styledComponents__TextWrapper-sc-m7jeli-1 styledComponents__NoDataTextWrapper-sc-m7jeli-2 iRdLpd cMdQDn"
              >
                <div
                  class="ant-space-item"
                >
                  No active alarms
                </div>
              </div>
            </div>
          </div>
          <div
            class="resize-triggers"
          >
            <div
              class="expand-trigger"
            >
              <div
                style="width: 1281px; height: 801px;"
              />
            </div>
            <div
              class="contract-trigger"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
